# FlowIO

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  ideas.md  readme.md
include/FlowIO/: FileStream.hpp  assert.hpp  binary_stream.hpp  byteswap.hpp  endian.hpp  file_stream.hpp  io_error.hpp  json.hpp  schema.hpp  schema_array.hpp  schema_concepts.hpp  schema_object.hpp  schema_primitive.hpp  schema_string.hpp  schema_validator_base.hpp  schema_value.hpp  schema_value_base.hpp
src/: binary_stream.cpp  file_stream.cpp  io_error.cpp  json.cpp  schema_value.cpp
test_src/: file_stream_test.cpp  mutable_test.cpp  schema_test.cpp
